overflow fixed

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@
 }
 .title {
   display: flex;
-  padding-left: 10px;
+  margin-left: 10px;
   width: 250px;
   font-size: large;
 }
@@ -39,6 +39,7 @@
 .title > .part2 {
   white-space: nowrap;
   overflow: hidden;
+
   text-overflow: ellipsis;
   direction: rtl;
 }
